2009-01-07 16:42-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PreferencePanes/NSPreferencePane.h
	* PreferencePanes/NSPreferencePane.m
	* PreferencePanes/PreferencePanes.h: Corrections to header
	language. 

2008-09-25 02:42-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* Modules/ColorSchemes/GNUmakefile
	* Modules/Defaults/GNUmakefile
	* Modules/FileSystem/GNUmakefile
	* Modules/Fonts/GNUmakefile
	* Modules/GNUmakefile
	* Modules/ModifierKeys/GNUmakefile
	* Modules/Template/GNUmakefile
	* Modules/TimeZone/GNUmakefile
	* Modules/Volumes/GNUmakefile
	* PreferencePanes/GNUmakefile
	* SystemPreferences/GNUmakefile: Change to install into LOCAL domain 
	by default.  Corrects bug #24677.

2008-09-12 Riccardo Mottola <multix79@yahoo.com>

	* Modules/Volumes: Corrected grammar

2008-08-30 17:53-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PreferencePanes/NSPreferencePane.h: Correct compile error.

2008-01-19  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile: Add install domain so windows installer
	can find it.
	* SystemPreferences.nsi.in: New file
	* README: Update.

2008-01-18 18:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.2
	
2007-07-24 18:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/ColorSchemes/NSColorStringMethods.h: Minor correction,
	changed to use #ifndef instead of #ifdef.

2007-03-07  Nicola Pero <nicola.pero@meta-innovation.com>

	The application now compiles and runs on MinGW.
	* SystemPreferences/SystemPreferences.m (changeFont:): New method
	that forwards changeFont: to the current pane if it responds to
	the selector.
	* SystemPreferences/SystemPreferences.h (changeFont:): New method.
	* Modules/Fonts/FontModule.m: Removed category/notification
	workaround to get the changeFont: call.
	* Modules/Fonts/FontModule.h: Removed category workaround.
	
2007-03-06  Nicola Pero <nicola.pero@meta-innovation.com>
