@@ -1,3 +1,8 @@
+2009-01-09 10:12-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* PreferencePanes/NSPreferencePane.m: Try Info-gnustep.plist if
+	Info.plist cannot be found.
+
 2009-01-07 16:42-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* PreferencePanes/NSPreferencePane.h
